--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,6 @@ code {
  font-size: 2rem;
  justify-content: space-around;
  display:flex;
- background-color: aquamarine;
+ color: #fff;
  width: 30%;
 }
