changes to menu

--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -26,6 +26,8 @@
 
 .actionButton:after {
   content: "";
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+
   right: 3.5rem;
   bottom: 3.5rem;
   border-color: inherit;
