--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -5,6 +5,9 @@
   align-items: center;
   position: fixed;
   background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+  right: 3.5rem;
+  bottom: 3.5rem;
+  z-index: 99999999999999999999;
 }
 
 .actionButton {
