changes in button

--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -3,7 +3,9 @@
   height: 60px;
   border-radius: 50%;
   align-items: center;
-  position: absolute;
+  position: a;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+
   right: 3.5rem;
   bottom: 3.5rem;
   z-index: 99999999999999999999;
@@ -27,7 +29,9 @@
 }
 
 .actionButton:after {
-  content: "";
+  /* content: ""; */
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+
   right: 3.5rem;
   bottom: 3.5rem;
   border-color: inherit;
@@ -62,8 +66,6 @@
   width: 60px;
   background-color: #25d366;
   color: #fff;
-  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
-
   text-align: center;
   font-size: 2rem;
   position: fixed;
