--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -10,6 +10,18 @@
   bottom: 3.5rem;
   z-index: 99999999999999999999;
 }
+.floatingBtn::after {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  align-items: center;
+  position: a;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+
+  right: 3.5rem;
+  bottom: 3.5rem;
+  z-index: 99999999999999999999;
+}
 
 .actionButton {
   right: 3.5rem;
