--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -94,11 +94,10 @@
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
 }
 
-
 .messenger {
   height: 60px;
   width: 60px;
-  background-color: #006AFF;
+  background-color: #006aff;
   color: #fff;
   text-align: center;
   font-size: 2rem;
@@ -114,7 +113,6 @@
   align-items: center;
   margin: auto;
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
-
 }
 
 .email {
@@ -138,3 +136,64 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
+
+/* new*/
+
+/* * {
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100vh;
+  background-color: #04f9f2;
+  position: relative;
+}
+.wrapper {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+.wrapper a:nth-child(1) {
+  background-color: green;
+}
+.wrapper a:nth-child(2) {
+  background-color: blue;
+}
+.wrapper a:nth-child(3) {
+  animation: 0.7s ease-out 0s 1 FadeIn;
+  transition: all 0.3s;
+}
+.wrapper a:hover:nth-child(3) {
+  background-color: red;
+}
+@keyframes FadeIn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.hide {
+  position: absolute;
+  bottom: 0px !important;
+  z-index: -1;
+  transition: all 2s;
+}
+.social {
+}
+.wrapper a {
+  height: 30px;
+  width: 30px;
+  background: #000;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  margin: 2px;
+} */
