platinum bar hover

--- a/src/index.css
+++ b/src/index.css
@@ -45,21 +45,33 @@ code {
 /*responsive menu*/
 .link-underline-responsive {
   border-bottom-width: 0;
-  background-image: linear-gradient(transparent, transparent), linear-gradient(#7DB6D5, #7DB6D5);
+  background-image: linear-gradient(transparent, transparent), linear-gradient(-72deg,
+  #dedeff,
+  #ffffff 16%,
+  #dedeff 21%,
+  #ffffff 24%,
+  #555564 27%,
+  #dedeff 36%,
+  #ffffff 45%,
+  #ffffff 60%,
+  #dedeff 72%,
+  #ffffff 80%,
+  #dedeff 84%,
+  #555564);
   background-size: 0 100%;
-  background-position: 0 100%;
+  background-position: 100% 100%;
   background-repeat: no-repeat;
   transition: background-size .5s ease-in-out;
   
 }
 
-.link-underline-black-responsive {
+/* .link-underline-black-responsive {
   background-image: linear-gradient(transparent, transparent), linear-gradient(#7DB6D5, #7DB6D5);
-}
+} */
 
 .link-underline-responsive:hover {
   background-size: 100% 100%;
-  background-position: 50% 50%;
+  background-position: 100% 100%;
   color: #0C2348;
 }
 
@@ -81,4 +93,81 @@ code {
  display:flex;
  color: #fff;
  width: 100%;
+}
+
+.button-platinum {
+  color: rgba(0, 0, 0, 0.72);
+  text-decoration: none;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 #ffffff;
+  box-shadow:
+    2px 2px 0.5em rgba(122, 122, 122, 0.55),
+    inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+    inset -1px -1px 0 rgba(0, 0, 0, 0.5)
+  ;
+  border: 1px solid #cacade;
+  background:
+    -moz-linear-gradient(
+    -72deg,
+    #dedeff,
+    #ffffff 16%,
+    #dedeff 21%,
+    #ffffff 24%,
+    #555564 27%,
+    #dedeff 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #dedeff 72%,
+    #ffffff 80%,
+    #dedeff 84%,
+    #555564
+  );
+  background:
+  -webkit-linear-gradient(
+    -72deg,
+    #dedeff,
+    #ffffff 16%,
+    #dedeff 21%,
+    #ffffff 24%,
+    #555564 27%,
+    #dedeff 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #dedeff 72%,
+    #ffffff 80%,
+    #dedeff 84%,
+    #555564
+  );
+  background:
+  -o-linear-gradient(
+    -72deg,
+    #dedeff,
+    #ffffff 16%,
+    #dedeff 21%,
+    #ffffff 24%,
+    #555564 27%,
+    #dedeff 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #dedeff 72%,
+    #ffffff 80%,
+    #dedeff 84%,
+    #555564
+  );
+  background:
+  linear-gradient(
+    -72deg,
+    #dedeff,
+    #ffffff 16%,
+    #dedeff 21%,
+    #ffffff 24%,
+    #555564 27%,
+    #dedeff 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #dedeff 72%,
+    #ffffff 80%,
+    #dedeff 84%,
+    #555564
+  );
 }
