--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,9 @@ code {
   
 }
 
-/* .link-underline-black-responsive {
+.link-underline-black-responsive {
   background-image: linear-gradient(transparent, transparent), linear-gradient(#7DB6D5, #7DB6D5);
-} */
+}
 
 .link-underline-responsive:hover {
   background-size: 100% 100%;
@@ -84,6 +84,7 @@ code {
 .heroBGC{
   background: #7DB6D5;
   background: radial-gradient(circle, #7DB6D5 0%, #0C2348 60%);
+  
 }
 
 .iconosFooter{
