--- a/src/index.css
+++ b/src/index.css
@@ -172,3 +172,29 @@ code {
     #555564
   );
 }
+
+
+.listaPlateada{
+  position: relative;
+ height: 50px;
+  margin-top: 93vh;
+  background-image: linear-gradient(transparent, transparent), linear-gradient(-72deg,
+  #dedeff,
+  #ffffff 16%,
+  #dedeff 21%,
+  #ffffff 24%,
+  #555564 27%,
+  #dedeff 36%,
+  #ffffff 45%,
+  #ffffff 60%,
+  #dedeff 72%,
+  #ffffff 80%,
+  #dedeff 84%,
+  #555564);
+  background-size: 100%;
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  transition: background-size .5s ease-in-out;
+  
+}
+  
