--- a/src/index.css
+++ b/src/index.css
@@ -198,3 +198,12 @@ code {
   
 }
   
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  height: 100vh;
+  width: 100vw;
+}
