--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -16,7 +16,7 @@
   border-radius: 50%;
   align-items: center;
   position: fixed;
-  background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc");
+  /* background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/lunatrasnp.png?alt=media&token=6cbbc429-aa7f-4908-8b92-1054753855fc"); */
 
   right: 3.5rem;
   bottom: 3.5rem;
