--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'HortaRegular';
 
  
@@ -79,11 +81,28 @@ code {
 
 
 .underlineComp {
-  border-bottom: 2px solid #0C2348;
+  border-bottom: 20px solid transparent;
+  border-image: linear-gradient(-72deg,
+  #dedeff,
+  #ffffff 16%,
+  #dedeff 21%,
+  #ffffff 24%,
+  #555564 27%,
+  #dedeff 36%,
+  #ffffff 45%,
+  #ffffff 60%,
+  #dedeff 72%,
+  #ffffff 80%,
+  #dedeff 84%,
+  #555564);
+    border-image-slice: 1;
+    width:100%;
+  
 }
 .heroBGC{
   background: #7DB6D5;
   background: radial-gradient(circle, #7DB6D5 0%, #0C2348 60%);
+ 
   
 }
 
@@ -98,6 +117,9 @@ code {
 
 .button-platinum {
   color: rgba(0, 0, 0, 0.72);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
   text-decoration: none;
   font-weight: bold;
   text-shadow: 1px 1px 0 #ffffff;
@@ -175,9 +197,9 @@ code {
 
 
 .listaPlateada{
-  position: relative;
+  /* position: relative;
  height: 50px;
-  margin-top: 93vh;
+  margin-top: 93vh; */
   background-image: linear-gradient(transparent, transparent), linear-gradient(-72deg,
   #dedeff,
   #ffffff 16%,
@@ -199,11 +221,3 @@ code {
 }
   
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  height: 100vh;
-  width: 100vw;
-}
