--- a/src/FloatContact.css
+++ b/src/FloatContact.css
@@ -6,19 +6,14 @@
   position: relative;
   /* background-color: #25d366; */
   background-image: url("https://firebasestorage.googleapis.com/v0/b/silver-protect.appspot.com/o/luna-button.png?alt=media&token=ade59939-4341-41e8-a041-f06df915a9b5");
-
+  border: solid .5px rgba(1, 2, 19, 0.548);
   right: 3.5rem;
   bottom: 3.5rem;
   z-index: 99999999999999999999;
   box-shadow:
-    inset 0 0 50px #fff,      /* inner white */
-    inset 20px 0 80px rgb(224, 224, 224),   /* inner left magenta short */
-    inset -20px 0 80px rgb(0, 0, 0),  /* inner right cyan short */
-    inset 20px 0 300px rgb(218, 212, 218),  /* inner left magenta broad */
-    inset -20px 0 300px rgb(72, 73, 73), /* inner right cyan broad */
     0 0 50px #fff,            /* outer white */
-    -10px 0 80px rgb(2, 2, 2),        /* outer left magenta */
-    10px 0 80px rgb(4, 14, 61);         /* outer right cyan */
+    -10px 0 80px rgb(4, 14, 61),         /* outer left */
+    10px 0 80px rgb(4, 14, 61);         /* outer right */
 }
 /* .floatingBtn::after {
   width: 60px;
@@ -37,7 +32,7 @@
   right: 3.5rem;
   bottom: 3.5rem;
   display: flex;
-  color: #0c234c;
+  color: #000000;
   justify-content: center;
   align-items: center;
   margin: auto;
