--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ code {
 
 }
 
+
+.textos {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  
+}
+
 .hero-slider-overlay {
   color: white;
   background-color: rgba(0, 34, 78, 0);
