--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@ code {
   font-weight: 600;
   
 }
+.texto-footer {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  
+  
+}
 
 .hero-slider-overlay {
   color: white;
@@ -55,7 +61,7 @@ code {
   border-bottom-width: 0;
   background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
   background-size: 100% 0;
-  padding: 5px;
+  padding: 5px 5px 5px 5px;
   background-position: 0 100%;
   background-repeat: no-repeat;
   transition: background-size .3s ease-in-out;
