--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@ code {
 
 
 .textos {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   
 }
 .texto-footer {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   
   
