changes in cards

--- a/src/index.css
+++ b/src/index.css
@@ -238,8 +238,8 @@ code {
   #555564 27%,
   #dedeff 36%,
   #ffffff 45%,
-  #ffffff 60%,
-  #dedeff 72%,
+  #4a4a55 60%,
+  #555564 72%,
   #ffffff 80%,
   #dedeff 84%,
   #555564);
