--- a/src/index.css
+++ b/src/index.css
@@ -254,4 +254,15 @@ code {
   
 }
   
-
+/*Blinking arrow*/
+.blink {
+  
+  animation: blink .8s linear infinite;
+    
+    
+  }
+  @keyframes blink{
+    0%{opacity: 0;}
+    50%{opacity: .7;}
+    100%{opacity: 1;}
+    }
